Respond to reviewers' comments

--- a/submission/references.bib
+++ b/submission/references.bib
@@ -382,6 +382,20 @@
   journal = {Journal of Investigative Dermatology}
 }
 
+@article{Multinu2018,
+  doi = {10.1128/msphere.00560-17},
+  url = {https://doi.org/10.1128/msphere.00560-17},
+  year = {2018},
+  month = mar,
+  publisher = {American Society for Microbiology},
+  volume = {3},
+  number = {2},
+  author = {Francesco Multinu and Sean C. Harrington and Jun Chen and Patricio R. Jeraldo and Stephen Johnson and Nicholas Chia and Marina R. Walther-Antonio},
+  editor = {Carolin Frank},
+  title = {Systematic Bias Introduced by Genomic {DNA} Template Dilution in 16S {rRNA} Gene-Targeted Microbiota Profiling in Human Stool Homogenates},
+  journal = {{mSphere}}
+}
+
 @article{Parada2015,
   doi = {10.1111/1462-2920.13023},
   url = {https://doi.org/10.1111/1462-2920.13023},
@@ -586,6 +600,33 @@
   publisher={Am Soc Microbiol}
 }
 
+@article{Sze2016,
+  doi = {10.1128/mbio.01018-16},
+  url = {https://doi.org/10.1128/mbio.01018-16},
+  year = {2016},
+  month = aug,
+  publisher = {American Society for Microbiology},
+  volume = {7},
+  number = {4},
+  author = {Marc A. Sze and Patrick D. Schloss},
+  title = {Looking for a Signal in the Noise: Revisiting Obesity and the Microbiome},
+  journal = {{mBio}}
+}
+
+@article{Sze2018,
+  doi = {10.1128/mbio.00630-18},
+  url = {https://doi.org/10.1128/mbio.00630-18},
+  year = {2018},
+  month = jun,
+  publisher = {American Society for Microbiology},
+  volume = {9},
+  number = {3},
+  author = {Marc A. Sze and Patrick D. Schloss},
+  editor = {Claire M. Fraser},
+  title = {Leveraging Existing 16S {rRNA} Gene Surveys To Identify Reproducible Biomarkers in Individuals with Colorectal Tumors},
+  journal = {{mBio}}
+}
+
 @article{Wagner1994,
   title={Surveys of gene families using polymerase chain reaction: PCR selection and PCR drift},
   author={Wagner, Andreas and Blackstone, Neil and Cartwright, Paulyn and Dick, Matthew and Misof, Bernhard and Snow, Peter and Wagner, Gunter P and Bartels, Janet and Murtha, Mike and Pendleton, John},
@@ -626,6 +667,19 @@
   journal = {{mSphere}}
 }
 
+@article{Williams2006,
+  doi = {10.1038/nmeth896},
+  url = {https://doi.org/10.1038/nmeth896},
+  year = {2006},
+  month = jul,
+  publisher = {Springer Nature},
+  volume = {3},
+  number = {7},
+  pages = {545--550},
+  author = {Richard Williams and Sergio G Peisajovich and Oliver J Miller and Shlomo Magdassi and Dan S Tawfik and Andrew D Griffiths},
+  title = {Amplification of complex gene libraries by emulsion {PCR}},
+  journal = {Nature Methods}
+}
 
 
 
