--- a/submission/references.bib
+++ b/submission/references.bib
@@ -396,6 +396,20 @@
   journal = {{mSphere}}
 }
 
+@article{Nayfach2016,
+  doi = {10.1016/j.cell.2016.08.007},
+  url = {https://doi.org/10.1016/j.cell.2016.08.007},
+  year = {2016},
+  month = aug,
+  publisher = {Elsevier {BV}},
+  volume = {166},
+  number = {5},
+  pages = {1103--1116},
+  author = {Stephen Nayfach and Katherine S. Pollard},
+  title = {Toward Accurate and Quantitative Comparative Metagenomics},
+  journal = {Cell}
+}
+
 @article{Parada2015,
   doi = {10.1111/1462-2920.13023},
   url = {https://doi.org/10.1111/1462-2920.13023},
